linked href in shop, havent create bundle pages

--- a/basicbitches.html
+++ b/basicbitches.html
@@ -18,7 +18,7 @@
      crossorigin="anonymous"></script>
  
      <!--css / fonts-->
-     <link rel="stylesheet" href="css/shop.css">
+     <link rel="stylesheet" href="css/styles.css">
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Paytone+One&family=Titan+One&display=swap"
@@ -101,14 +101,14 @@
           <!-- 3 part grid starts here -->
           <!-- first column -->
           <div class="product-info-img">
-            <img src="images/shop-products/best-lotus-biscoff-flavoured-cashews.png" alt="">
+            <img src="images/shop-products/best-flavoured-cashews-classic-bundle.png" alt="">
           </div>
           <!-- second column / empty column -->
           <!-- <div class=""></div> -->
           <!-- third column -->
           <div class="product-info-text">
             <div class="product-name-desc">
-                <h3>Chocolate Cashews</h3>
+                <h3>Bas!c B!tches Bundle</h3>
                 <h6>Our chocolate-covered cashews are a decadent delight that will sweeten your life. Each nut is generously coated in fine, powdered chocolate, creating a perfect harmony of intense cocoa richness and the satisfying crunch of premium cashews.</h6>
             </div>
             <div class="ind-prod-review-line">
@@ -118,20 +118,20 @@
             <div class="product-size-padding">
                 <div class="product-size-grid">
                     <div class="product-size-contents">
-                        <button type="button"><b class="product-size-weight-text">150g</b> <br> $4.50</button>
+                        <button type="button"><b class="product-size-weight-text">150g</b> <br> $13.00 </button>
                         <!-- <div class="price-text">
                             <p class="orange-text">$4.50</p>
                         </div> -->
                         
                     </div>
                     <div class="product-size-contents">
-                        <button type="button"><b class="product-size-weight-text">400g</b> <br> $8.50</button>
+                        <button type="button"><b class="product-size-weight-text">400g</b> <br> $24.00 </button>
                         <!-- <div class="price-text">
                             <p class="orange-text">$8.50</p>
                         </div> -->
                     </div>
                     <div class="product-size-contents">
-                        <button type="button"><b class="product-size-weight-text">1kg</b> <br>$17.00</button>
+                        <button type="button"><b class="product-size-weight-text">1kg</b> <br>$49.00</button>
                         <!-- <div class="price-text">
                             <p class="orange-text">$17.00</p>
                         </div> -->
@@ -171,58 +171,49 @@
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/shop-products/best-flavoured-cashews-bundle-6.png"></a>
+                            <img src="images/shop-products/best-flavoured-cashews-local-shiok-bundle.png"></a>
                             <p>Indulge in our irresistible Biscoff-infused cashews.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png"></a>
+                            <img src="images/shop-products/best-flavoured-cashews-savoury-bundle.png"></a>
                             <p>Snack on our perfectly roasted and lightly salted premium cashews.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/shop-products/best-salted-egg-cheese-flavoured-cashews.png"></a>
+                            <img src="images/shop-products/best-flavoured-cashews-sweet-bundle.png"></a>
                             <p>Indulge in the rich and creamy fusion of Salted Egg and Cheese.</p>
                         </div>
                     </div>
+
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
-                            <a href="">
-                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
+                            <a href="blackpepper.html">
+                                <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
                             <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
                         </div>
                     </div>
+
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
-                            <a href=""><img src="images/shop-products/best-mala-flavoured-cashews"></a>
-                            <p>Ignite your taste buds with the fiery sensation of Mala.</p>
+                            <a href="saltroasted.html">
+                                <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png"></a>
+                            <p>Snack on our perfectly roasted and lightly salted premium cashews.</p>
                         </div>
                     </div>
+
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
-                            <a href="">
-                            <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png"></a>
+                            <a href="smokybbq.html">
+                                <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png"></a>
                             <p>Experience the hearty and smoky goodness of our BBQ-infused cashews.</p>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-4 col-4">
-                        <div>
-                            <a href="">
-                            <img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
-                            <p>Take a flavourful journey with our Laksa-infused cashews.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-4">
-                        <div>
-                            <a href="">
-                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
-                            <p>A bold tribute to Singapore’s iconic chilli crab.</p>
-                        </div>
-                    </div>  
+                    
                 </div>
             </div>
         </div>
