--- a/shop.html
+++ b/shop.html
@@ -124,10 +124,83 @@
       <div id="all" class="tabcontent shop-tabcontent">
 
         <div class="shop-content">
-          <a href="#">
+          <a href="basicbitches.html">
+          <div class="shop-product">
+            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-2">
+            <img src="images/shop-products/best-flavoured-cashews-classic-bundle.png" class="shop-product-img">
+            <h5> Bas!c B!tches Bundle</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="shiokaah.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-flavoured-cashews-local-shiok-bundle.png" class="shop-product-img">
+            <h5> Shiok Aah! Bundle</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="surebohsavoury.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-flavoured-cashews-savoury-bundle.png" class="shop-product-img">
+            <h5> Sure Boh?! Savoury Bundle</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="surebohsweet.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-flavoured-cashews-sweet-bundle.png" class="shop-product-img">
+            <h5> Sure Boh?! Sweet Bundle</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="bandung.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-bandung-flavoured-cashews.png" class="shop-product-img">
+            <h5>Bandung Cashews</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="blackpepper.html">
           <div class="shop-product">
             <img src="images/shop-products/best-black-pepper-flavoured-cashews.png" class="shop-product-img">
             <h5> Black Pepper Cashews</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="chickenrice.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-chicken-rice-flavoured-cashews.png" class="shop-product-img">
+            <h5>Chicken Rice Cashews</h5>
             <div class="shop-review-line">
               <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
             </div>
@@ -148,7 +221,7 @@
         </div>
 
         <div class="shop-content">
-          <a href="#">
+          <a href="chocolate.html">
           <div class="shop-product">
             <img src="images/shop-products/best-chocolate-flavoured-cashews.png" class="shop-product-img">
             <h5> Chocolate Cashews</h5>
@@ -160,7 +233,19 @@
         </div>
 
         <div class="shop-content">
-          <a href="#">
+          <a href="durian.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-durian-flavoured-cashews.png" class="shop-product-img">
+            <h5>Durian Cashews</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="laksa.html">
           <div class="shop-product">
             <img src="images/shop-products/best-laksa-flavoured-cashews.png" class="shop-product-img">
             <h5> Laksa Cashews</h5>
@@ -172,7 +257,7 @@
         </div>
 
         <div class="shop-content">
-          <a href="#">
+          <a href="biscoff.html">
           <div class="shop-product">
             <img src="images/shop-products/best-lotus-biscoff-flavoured-cashews.png" class="shop-product-img">
             <h5> Lotus Biscoff Cashews</h5>
@@ -184,7 +269,7 @@
         </div>
 
         <div class="shop-content">
-          <a href="#">
+          <a href="mala.html">
           <div class="shop-product">
             <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img">
             <img src="images/shop-products/best-mala-flavoured-cashews.png" class="shop-product-img">
@@ -197,7 +282,7 @@
         </div>
 
         <div class="shop-content">
-          <a href="#">
+          <a href="saltroasted.html">
           <div class="shop-product">
             <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png" class="shop-product-img">
             <h5> Salt-roasted Cashews</h5>
@@ -221,6 +306,18 @@
         </div>
 
         <div class="shop-content">
+          <a href="sambal.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-sambal-belacan-flavoured-cashews.png" class="shop-product-img">
+            <h5>Sambal Belacan Cashews</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
           <a href="#">
           <div class="shop-product">
             <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png" class="shop-product-img">
@@ -233,11 +330,10 @@
         </div>
 
         <div class="shop-content">
-          <a href="chillicrab.html">
+          <a href="wantonmee.html">
           <div class="shop-product">
-            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-2">
-            <img src="images/shop-products/best-flavoured-cashews-bundle-3.png" class="shop-product-img">
-            <h5> Triple Crunch Delight Bundle</h5>
+            <img src="images/shop-products/best-wanton-mee-flavoured-cashews.png" class="shop-product-img">
+            <h5>Wanton Mee Cashews</h5>
             <div class="shop-review-line">
               <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
             </div>
@@ -246,29 +342,16 @@
         </div>
 
         <div class="shop-content">
-          <a href="chillicrab.html">
+          <a href="whiterabbit.html">
           <div class="shop-product">
-            <img src="images/shop-products/best-flavoured-cashews-bundle-6.png" class="shop-product-img">
-            <h5> Six-Pack Sensation Bundle</h5>
+            <img src="images/shop-products/best-white-rabbit-flavoured-cashews.png" class="shop-product-img">
+            <h5>White Rabbit Cashews</h5>
             <div class="shop-review-line">
               <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
             </div>
           </div>
           </a>
         </div>
-
-        <div class="shop-content">
-          <a href="chillicrab.html">
-          <div class="shop-product">
-            <img src="images/shop-products/best-flavoured-cashews-bundle-9.png" class="shop-product-img">
-            <h5> Nine-Nut Extravaganza Bundle</h5>
-            <div class="shop-review-line">
-              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
-            </div>
-          </div>
-          </a>
-        </div>
-
 
       </div>
 
@@ -289,11 +372,11 @@
         </div>
 
         <div class="shop-content">
-          <a href="chillicrab.html">
+          <a href="surebohsavoury.html">
           <div class="shop-product">
             <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-4">
-            <img src="images/shop-products/best-flavoured-cashews-bundle-3.png" class="shop-product-img">
-            <h5> Bundle A</h5>
+            <img src="images/shop-products/best-flavoured-cashews-savoury-bundle.png" class="shop-product-img">
+            <h5> Sure Boh?! Savoury Bundle</h5>
             <div class="shop-review-line">
               <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
             </div>
@@ -333,7 +416,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-5">
+            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-6">
             <img src="images/shop-products/best-mala-flavoured-cashews.png" class="shop-product-img">
             <h5> Mala Cashews</h5>
             <div class="shop-review-line">
@@ -431,10 +514,47 @@
        <div id="local" class="tabcontent shop-tabcontent">
 
         <div class="shop-content">
+          <a href="bandung.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-bandung-flavoured-cashews.png" class="shop-product-img">
+            <h5>Bandung Cashews</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="chickenrice.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-chicken-rice-flavoured-cashews.png" class="shop-product-img">
+            <h5>Chicken Rice Cashews</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+
+        <div class="shop-content">
           <a href="chillicrab.html">
           <div class="shop-product">
             <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png" class="shop-product-img">
             <h5>  Chilli Crab Cashews </h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="durian.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-durian-flavoured-cashews.png" class="shop-product-img">
+            <h5>Durian Cashews</h5>
             <div class="shop-review-line">
               <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
             </div>
@@ -479,17 +599,53 @@
           </a>
         </div>
 
+        <div class="shop-content">
+          <a href="sambal.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-sambal-belacan-flavoured-cashews.png" class="shop-product-img">
+            <h5>Sambal Belacan Cashews</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="wantonmee.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-wanton-mee-flavoured-cashews.png" class="shop-product-img">
+            <h5>Wanton Mee Cashews</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="whiterabbit.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-white-rabbit-flavoured-cashews.png" class="shop-product-img">
+            <h5>White Rabbit Cashews</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
       </div>
 
       <!-- bundles-->
       <div id="bundles" class="tabcontent shop-tabcontent">
 
         <div class="shop-content">
-          <a href="#">
+          <a href="basicbitches.html">
           <div class="shop-product">
-            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-3">
-            <img src="images/shop-products/best-flavoured-cashews-bundle-3.png" class="shop-product-img">
-            <h5>  Bundle A </h5>
+            <img src="images/cashews-on-sale-tag.png" alt="" class="sale-tag-img-2">
+            <img src="images/shop-products/best-flavoured-cashews-classic-bundle.png" class="shop-product-img">
+            <h5> Bas!c B!tches Bundle</h5>
             <div class="shop-review-line">
               <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
             </div>
@@ -498,10 +654,10 @@
         </div>
 
         <div class="shop-content">
-          <a href="#">
+          <a href="shiokaah.html">
           <div class="shop-product">
-            <img src="images/shop-products/best-flavoured-cashews-bundle-6.png" class="shop-product-img">
-            <h5> Bundle B</h5>
+            <img src="images/shop-products/best-flavoured-cashews-local-shiok-bundle.png" class="shop-product-img">
+            <h5> Shiok Aah! Bundle</h5>
             <div class="shop-review-line">
               <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
             </div>
@@ -510,10 +666,22 @@
         </div>
 
         <div class="shop-content">
-          <a href="#">
+          <a href="surebohsavoury.html">
           <div class="shop-product">
-            <img src="images/shop-products/best-flavoured-cashews-bundle-9.png" class="shop-product-img">
-            <h5> Bundle C</h5>
+            <img src="images/shop-products/best-flavoured-cashews-savoury-bundle.png" class="shop-product-img">
+            <h5> Sure Boh?! Savoury Bundle</h5>
+            <div class="shop-review-line">
+              <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
+            </div>
+          </div>
+          </a>
+        </div>
+
+        <div class="shop-content">
+          <a href="surebohsweet.html">
+          <div class="shop-product">
+            <img src="images/shop-products/best-flavoured-cashews-sweet-bundle.png" class="shop-product-img">
+            <h5> Sure Boh?! Sweet Bundle</h5>
             <div class="shop-review-line">
               <img src="images/stars.png" alt="" height="12"><h6>1 review</h6>
             </div>
@@ -522,10 +690,6 @@
         </div>
 
       </div>
-
-      
-
-
 
     </div>
 
