--- a/mala.html
+++ b/mala.html
@@ -19,7 +19,7 @@
         crossorigin="anonymous"></script>
 
     <!--css / fonts-->
-    <link rel="stylesheet" href="css/shop.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
