--- a/saltroasted.html
+++ b/saltroasted.html
@@ -19,7 +19,7 @@
         crossorigin="anonymous"></script>
 
     <!--css / fonts-->
-    <link rel="stylesheet" href="css/shop.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -207,7 +207,7 @@
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
                         <a href="mala.html">
-                            <img src="images/shop-products/best-mala-flavoured-cashews"></a>
+                            <img src="images/shop-products/best-mala-flavoured-cashews.png"></a>
                         <p>Ignite your taste buds with the fiery sensation of Mala.</p>
                     </div>
                 </div>
