--- a/about-us.html
+++ b/about-us.html
@@ -70,6 +70,7 @@
                 <div class="accordion-body">
                     <a class="nav-links" href="about-us.html">About Us</a> <br>
                     <a class="nav-links" href="shop.html">Shop</a><br>
+                    <a class="nav-links" href="corporate.html">Corporate</a><br>
                     <a class="nav-links" href="Find Us">Find Us</a><br>
                     <a class="nav-links" href="contact-us.html">Contact Us</a><br>
                     <a class="nav-links" href="faqs.html">FAQs</a><br>
