--- a/farm.html
+++ b/farm.html
@@ -68,6 +68,7 @@
                 <div class="accordion-body">
                     <a class="nav-links" href="about-us.html">About Us</a> <br>
                     <a class="nav-links" href="shop.html">Shop</a><br>
+                    <a class="nav-links" href="corporate.html">Corporate</a><br>
                     <a class="nav-links" href="Find Us">Find Us</a><br>
                     <a class="nav-links" href="contact-us.html">Contact Us</a><br>
                     <a class="nav-links" href="faqs.html">FAQs</a><br>
@@ -93,88 +94,79 @@
             </div>
         </div>
     </div>
-    <!--Achieving the perfect cashews-->
-    <div class="processes">
-        <div class="heading">
-            <h3>How We Achieve the Perfect Cashews</h3>
+    <!--website Achieving the perfect cashews-->
+    <div class="web-processes" id="web-processes" style="scroll-margin-top: 9em;">
+        <img class="nuts-banner" src="images/nuts-banner.png">
+        <h3 class="heading">How We Achieve the Perfect Cashews</h3>
+        <div class="timeline">
+            <div class="container left row justify-content-md-center col">
+                <div class="tl-content tl-1">
+                    <h3>Step 1</h3>
+                    <img src="images/biscoff.png">
+                    <h6>Hand-pick the best quality cashews from our farm.</h6>
+                </div>
+            </div>
+            <div class="container right row justify-content-md-center col">
+                <div class="tl-content tl-2">
+                    <h3>Step 2</h3>
+                    <img src="images/biscoff.png">
+                    <h6>Dry cashews in the sunlight for a few days before roasting.</h6>
+                </div>
+            </div>
+            <div class="container left row justify-content-md-center col">
+                <div class="tl-content tl-2">
+                    <h3>Step 3</h3>
+                    <img src="images/biscoff.png">
+                    <h6>Remove the outer and inner shell by cutting and peeling.</h6>
+                </div>
+            </div>
+            <div class="container right row justify-content-md-center col" style="padding-bottom: 100px;">
+                <div class="tl-content tl-2">
+                    <h3>Step 4</h3>
+                    <img src="images/biscoff.png">
+                    <h6>Cashews are tossed and coated with our homemade flavourings.</h6>
+                </div>
+            </div>
         </div>
-        <div class="row-10">
-            <div class="row justify-content-md-center">
-                <div class="content col-md-8">
-                    <div class="content-right">
-                        <h3>Step 1</h3>
-                        <h6>Hand pick the best quality cashews from our farm.</h6>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-md-center">
-                <div class="col-md-8">
-                    <div class="content-left">
-                        <h3>Step 2</h3>
-                        <h6>Dry cashews in the sunlight for a few days before roasting.</h6>
-                        <div class="illustration">
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-md-center">
-                <div class="col-md-8">
-                    <div class="content-right">
-                        <h3>Step 3</h3>
-                        <h6>Remove the outer and inner shell by cutting and peeling.</h6>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-md-center">
-                <div class="col-md-8">
-                    <div class="content-left">
-                        <h3>Step 4</h3>
-                        <h6>Cashews are tossed and coated with our homemade flavourings.</h6>
-                    </div>
-                </div>
-            </div>
-        <img class="nuts" src="images/nuts.png">
-        </div>
+        <img class="nuts-banner" src="images/nuts-banner.png">
     </div>
-    <!-- <div class="processes">
-        <div class="row-10">
-            <div class="heading">
-                <h3>How we achieve the Perfect Cashews</h3> <br>
-            </div>
-            <img class="nuts" src="images/nuts.png"> -->
-            <!-- <div class="line"></div> -->
-            <!-- <div class="row">
-                <div class="info col-md-6 offset-md-5 col-12">
-                    <h3>Step 1</h3> <br>
-                    <h6>Hand pick the best quality cashews from our farm.</h6>
+    <!--Mobile Achieving the perfect cashews-->
+    <div class="mobile-processes" id="mobile-processes" style="scroll-margin-top: 9em;">
+        <img class="nuts-banner" src="images/nuts-banner.png">
+        <h3 class="heading">How We Achieve the Perfect Cashews</h3>
+        <div class="line"></div>
+        <div class="timeline">
+            <div class="container col">
+                <div class="tl-content tl-1">
+                    <h3>Step 1</h3>
+                    <img src="images/biscoff.png">
+                    <h6>Hand-pick the best quality cashews from our farm.</h6>
                 </div>
             </div>
-            <div class="row">
-                <div class="info col-md-6 offset-md-3 col-12">
-                    <h3>Step 2</h3> <br>
-                    <h6>Dry cashews in the sunlight for a few days before roasting.</h6> -->
-                    <!-- <img class="info-images" src="images/raw-cashews.png"> -->   
-                <!-- </div>
+            <div class="container col">
+                <div class="tl-content tl-2">
+                    <h3>Step 2</h3>
+                    <img src="images/biscoff.png">
+                    <h6>Dry cashews in the sunlight for a few days before roasting.</h6>
+                </div>
             </div>
-            <div class="row">
-                <div class="info col-md-6 offset-md-5 col-12">
-                    <h3>Step 3</h3> <br>
-                    <h6>Remove the outer and inner shell by cutting and peeling.</h6> -->
-                    <!-- <img class="info-images" src="images/raw-cashews.png"> -->   
-                <!-- </div>
+            <div class="container col">
+                <div class="tl-content tl-2">
+                    <h3>Step 3</h3>
+                    <img src="images/biscoff.png">
+                    <h6>Remove the outer and inner shell by cutting and peeling.</h6>
+                </div>
             </div>
-            <div class="row">
-                <div class="info col-md-6 offset-md-3 col-12">
-                    <h3>Step 4</h3> <br>
-                    <h6>Cashews are tossed and coated with our homemade flavourings.</h6> -->
-                    <!-- <img class="info-images" src="images/raw-cashews.png"> -->   
-                <!-- </div>
+            <div class="container col" style="padding-bottom: 100px;">
+                <div class="tl-content tl-2">
+                    <h3>Step 4</h3>
+                    <img src="images/biscoff.png">
+                    <h6>Cashews are tossed and coated with our homemade flavourings.</h6>
+                </div>
             </div>
         </div>
-        <img class="nuts" src="images/nuts.png">   
-        <img class="nuts-banner" src="images/nuts-banner.png" style="padding-top: 24px;">   
-    </div> -->
+        <img class="nuts-banner" src="images/nuts-banner.png">
+    </div>
     <!--Virtual Farm Tour--> 
     <div class="virtual-tour">
         <div class="row-10">
