--- a/pdpa.html
+++ b/pdpa.html
@@ -335,8 +335,8 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
-                    <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
+                    <a class="footer-link" href="pdpa.html">PRIVACY POLICY</a> <br>
+                    <a class="footer-link" href="">TERMS AND CONDITIONS</a> <br>
                 </div>
             </div>
             <div class="copyright">
@@ -367,8 +367,8 @@
                     </div>
                 </div>
                 <div class="privacy-tandc">
-                    <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
-                    <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
+                    <a class="mobile-footer-links" href="pdpa.html">PRIVACY POLICY</a> <br>
+                    <a class="mobile-footer-links" href="">TERMS AND CONDITIONS</a>
                 </div>
                 <div class="copyright">
                     <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
