change page names and added banner for index.html

--- a/account.html
+++ b/account.html
@@ -106,7 +106,7 @@
     <div class="page-20-percent">
 
         <div class="bannerclass text-center">
-            <h1>account</h1>
+            <h1>Account</h1>
         </div>
 
         <!--content-->
