--- a/cart.html
+++ b/cart.html
@@ -106,7 +106,7 @@
   <div class="page-10-percent">
 
     <div class="bannerclass text-center">
-      <h1>checkout</h1>
+      <h1>Checkout</h1>
     </div>
 
     <!--content-->
