--- a/faqs.html
+++ b/faqs.html
@@ -108,7 +108,7 @@
     <div class="page-20-percent">
 
         <div class="bannerclass text-center">
-            <h1>frequently asked<br>questions (faqs)</h1>
+            <h1>Frequently Asked Questions (FAQs)</h1>
         </div>
 
         <!-- tab buttons -->
