--- a/index.html
+++ b/index.html
@@ -50,80 +50,86 @@
             <div class="centered">
                 <a href="index.html"><img src="images/logo.png"></a>
             </div>
-        </div> 
+        </div>
     </div>
     <!--web nav bar-->
-  <div class="web-nav-bar">
-    <div class="row-nav-bar">
-        <div class="row">
-            <div class="nav col-md-10">
-                <a class="nav-links" href="about-us.html">About Us</a>
-                <div class="drop-down">
-                    <a id="shop-link" href="shop.html"></a><button class="btn dropdown-toggle nav-links" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Shop
-                    </button></a>
-                    <div class="dropdown-content">
-                        <a class="dropdown-item" href="shop.html" style="margin-top: 10px;">All Products</a>
-                        <a class="dropdown-item" href="shop.html#sales" style="margin-top: 10px;">On Sale</a>
-                        <a class="dropdown-item" href="corporate.html" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
+    <div class="web-nav-bar">
+        <div class="row-nav-bar">
+            <div class="row">
+                <div class="nav col-md-10">
+                    <a class="nav-links" href="about-us.html">About Us</a>
+                    <div class="drop-down">
+                        <a id="shop-link" href="shop.html"></a><button class="btn dropdown-toggle nav-links"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Shop
+                        </button></a>
+                        <div class="dropdown-content">
+                            <a class="dropdown-item" href="shop.html" style="margin-top: 10px;">All Products</a>
+                            <a class="dropdown-item" href="shop.html#sales" style="margin-top: 10px;">On Sale</a>
+                            <a class="dropdown-item" href="corporate.html"
+                                style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
+                        </div>
                     </div>
+                    <a class="nav-links" href="find-us.html">Find Us</a>
+                    <a class="nav-links" href="contact-us.html">Contact Us</a>
+                    <a class="nav-links" href="faqs.html">FAQs</a>
+                    <a class="nav-links" href="reviews.html">Reviews</a>
                 </div>
-                <a class="nav-links" href="find-us.html">Find Us</a>
-                <a class="nav-links" href="contact-us.html">Contact Us</a>
-                <a class="nav-links" href="faqs.html">FAQs</a>
-                <a class="nav-links" href="reviews.html">Reviews</a>  
-            </div>
-            <div class="col-md-1 offset-md-1 nav-icon">
-                <a href="account.html" style="margin-right: 15px;"><i class="nav-icon fa-regular fa-user"></i></a>
-                <a href="cart.html"><i class="nav-icon fa-solid fa-cart-shopping"></i></a>
+                <div class="col-md-1 offset-md-1 nav-icon">
+                    <a href="account.html" style="margin-right: 15px;"><i class="nav-icon fa-regular fa-user"></i></a>
+                    <a href="cart.html"><i class="nav-icon fa-solid fa-cart-shopping"></i></a>
+                </div>
             </div>
         </div>
+        <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
     </div>
-    <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
-</div> 
-<!--mobile nav bar-->
-<div class="mobile-nav-bar">
-    <a class="btn btn-primary" data-bs-toggle="collapse" href="#dropdown-content" role="button" aria-expanded="false" aria-controls="collapseExample">
-        <i class="fa-solid fa-bars"></i>
-    </a>
-    <a class="nav-links" href="account.html" style="margin-left: 60%;"><i class="fa-regular fa-user"></i></a>
-    <a class="nav-links" href="cart.html"><i class="fa-solid fa-cart-shopping" style="margin-left: 60%;"></i></a>
-    <div class="collapse" id="dropdown-content">
-        <div class="card card-body">
-            <div class="accordion-body">
-                <a class="nav-links" href="about-us.html">About Us</a> <br>
-                <a class="nav-links" href="shop.html">Shop</a><br>
-                <a class="nav-links" href="find-us.html">Find Us</a><br>
-                <a class="nav-links" href="contact-us.html">Contact Us</a><br>
-                <a class="nav-links" href="faqs.html">FAQs</a><br>
-                <a class="nav-links" href="reviews.html">Reviews</a>
+    <!--mobile nav bar-->
+    <div class="mobile-nav-bar">
+        <a class="btn btn-primary" data-bs-toggle="collapse" href="#dropdown-content" role="button"
+            aria-expanded="false" aria-controls="collapseExample">
+            <i class="fa-solid fa-bars"></i>
+        </a>
+        <a class="nav-links" href="account.html" style="margin-left: 60%;"><i class="fa-regular fa-user"></i></a>
+        <a class="nav-links" href="cart.html"><i class="fa-solid fa-cart-shopping" style="margin-left: 60%;"></i></a>
+        <div class="collapse" id="dropdown-content">
+            <div class="card card-body">
+                <div class="accordion-body">
+                    <a class="nav-links" href="about-us.html">About Us</a> <br>
+                    <a class="nav-links" href="shop.html">Shop</a><br>
+                    <a class="nav-links" href="find-us.html">Find Us</a><br>
+                    <a class="nav-links" href="contact-us.html">Contact Us</a><br>
+                    <a class="nav-links" href="faqs.html">FAQs</a><br>
+                    <a class="nav-links" href="reviews.html">Reviews</a>
+                </div>
             </div>
         </div>
-    </div> 
-    <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
-</div>
-    <div class="page-20-percent">
-        
-        <div class="bannerclass text-center">
-            <h1>Crack Open a World of Nutty Delights</h1>
+        <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
+    </div>
+
+    <div class="index-image-container">
+        <img src="images/best-favourite-healthy-fresh-quality-snack-cashews.png" alt="" class="index-img">
+        <div class="overlay page-10-percent">
             <h5>Welcome to Kacaang!</h5> <br>
-            <div class="indexbtn">
-                <button class="actionbutton changestyle"><a href="about-us.html" class="contact-link-no-underline">Learn
-                        More</a></button>
-                <button class="actionbutton"><a href="shop.html" class="contact-link-no-underline">Shop Now</a></button>
-            </div>
+                <h1>Crack Open a World of Nutty Delights</h1> <br>
+                <div class="indexbtn">
+                    <button class="actionbutton changestyle"><a href="about-us.html" class="contact-link-no-underline">Learn
+                            More</a></button>
+                    <button class="actionbutton"><a href="shop.html" class="contact-link-no-underline">Shop
+                            Now</a></button>
+                </div>
         </div>
     </div>
 
     <div class="page-10-percent text-center differentbg-brown deals">
         <div class="row suggested-scroll">
             <h3>You’d be <span class="changecolor">nuts</span> to miss these deals</h3>
-            <div class="flavours row" style="padding-bottom: 10%;">
-                <div class="col-md-3 col-sm-4 col-4">
+            <div class="flavours row">
+                <div class="col-md-4 col-sm-4 col-4">
                     <div>
                         <a href="mala.html" class="contact-link-no-underline">
                             <div class="shop-product">
-                                <img src="images/shop-products/sales-mala-flavoured-cashews.png" class="shop-product-img">
+                                <img src="images/shop-products/sales-mala-flavoured-cashews.png"
+                                    class="shop-product-img">
                                 <h5> Mala Cashews</h5>
                                 <div class="web-stars">
                                     <div class="shop-review-line">
@@ -140,11 +146,12 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-4 col-sm-4 col-4">
                     <div>
                         <a href="bundle-3.html" class="contact-link-no-underline">
                             <div class="shop-product">
-                                <img src="images/shop-products/best-flavoured-cashews-bundle-3.png" class="shop-product-img">
+                                <img src="images/shop-products/best-flavoured-cashews-bundle-3.png"
+                                    class="shop-product-img">
                                 <h5> Bundle A</h5>
                                 <div class="web-stars">
                                     <div class="shop-review-line">
@@ -161,11 +168,12 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-4 col-sm-4 col-4">
                     <div>
                         <a href="bundle-6.html" class="contact-link-no-underline">
                             <div class="shop-product">
-                                <img src="images/shop-products/best-flavoured-cashews-bundle-6.png" class="shop-product-img">
+                                <img src="images/shop-products/best-flavoured-cashews-bundle-6.png"
+                                    class="shop-product-img">
                                 <h5> Bundle B</h5>
                                 <div class="web-stars">
                                     <div class="shop-review-line">
@@ -181,7 +189,7 @@
                             </div>
                         </a>
                     </div>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
@@ -212,11 +220,14 @@
     <div class="page-10-percent differentbg-brown text-center">
         <h3>Any fresher you’ll have to grow it yourself</h3>
         <div class="videowrapper">
-            <iframe width="560" height="349" src="https://www.youtube.com/embed/36Vn7LJJt_I?si=WW1v0WgeTj-eBfFE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="349" src="https://www.youtube.com/embed/36Vn7LJJt_I?si=WW1v0WgeTj-eBfFE"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
         </div>
         <br><br>
         <button class="actionbutton"><a href="farm.html" class="contact-link-no-underline">Learn
-            More</a></button>
+                More</a></button>
     </div>
 
     <div class="page-10-percent deals text-center">
@@ -342,30 +353,30 @@
     <div class="mobile-footer">
         <div class="row-footer">
             <a href="index.html"><img class="kacaang-logo" src="images/logo.png">
-            <div class="mobile-footer-links">
-                <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
-                <a class="mobile-footer-links" href="shop.html">PROMOTIONS</a> <br>
-                <a class="mobile-footer-links" href="corporate.html">OCCASIONS</a> <br>
-                <a class="mobile-footer-links" href="corporate.html">CORPORATE</a> <br>
-                <a class="mobile-footer-links" href="faqs.html">FAQS</a> <br>
-                <a class="mobile-footer-links" href="about-us.html">OUR STORY</a> <br>
-                <a class="mobile-footer-links" href="farm.html">OUR FARM</a> <br>
-                <a class="mobile-footer-links" href="account.html">CASHEW CRAZE CLUB</a> <br>
-                <a class="mobile-footer-links" href="contact-us.html">CONTACT US</a> <br>
-                <div class="icons">
-                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                <div class="mobile-footer-links">
+                    <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
+                    <a class="mobile-footer-links" href="shop.html">PROMOTIONS</a> <br>
+                    <a class="mobile-footer-links" href="corporate.html">OCCASIONS</a> <br>
+                    <a class="mobile-footer-links" href="corporate.html">CORPORATE</a> <br>
+                    <a class="mobile-footer-links" href="faqs.html">FAQS</a> <br>
+                    <a class="mobile-footer-links" href="about-us.html">OUR STORY</a> <br>
+                    <a class="mobile-footer-links" href="farm.html">OUR FARM</a> <br>
+                    <a class="mobile-footer-links" href="account.html">CASHEW CRAZE CLUB</a> <br>
+                    <a class="mobile-footer-links" href="contact-us.html">CONTACT US</a> <br>
+                    <div class="icons">
+                        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                    </div>
                 </div>
-            </div>
-            <div class="privacy-tandc">
-                <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
-                <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
-            </div>
-            <div class="copyright">
-                <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
-            </div>
+                <div class="privacy-tandc">
+                    <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
+                    <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
+                </div>
+                <div class="copyright">
+                    <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
+                </div>
         </div>
         <img src="images/nuts-banner.png" style="width: 100%;">
     </div>
